# inotify-sync

./: AUTHORS  ChangeLog  INSTALL  Makefile.am  Makefile.in  README  README.md  configure  configure.in  inotify-sync.conf
actions/sync-action/: close_nowrite.py  common.py  delete.py  modify.py  moved_from.py  moved_to.py
actions/webshell-detection/: moved_to.py
src/: Makefile.am  Makefile.in  config.c  config.h  defines.h  defines.h.in  defines.h.in~  event_handler.c  event_handler.h  event_watcher.c  event_watcher.h  inotify-sync.c  log.c  log.h  log_mysql.c  log_mysql.h  utils.c  utils.h
